# pirate_life

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  url.rs  util.rs
