[package]
name = "pirate_life"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_canonicalize = { git = "https://github.com/valarauca/win_canonicalize" }
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
serde = { version = "1.0", features=["derive"] }
toml = "0.5"
regex = "1.0"
